2004-06-20  Theodore A. Roth  <troth@openavr.org>

	* xml: New directory.
	* xml/Device.dtd: New file.

2004-06-04  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (install-data-local): Install version.h file.
	* acconfig.h: New file.
	* config-ml.in: When adding the Multi.tem fragment to the Makefile,
	don't use a variable or the fragment will be added to the version.h
	file instead of the Makefile.
	* configure.in: Generate the version.h config header file.
	* reconf: Run autoheader.

2004-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega8

2004-05-21  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bruce Graham <bgraham@huronnet.com>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn13.h: Add comments for register defs.
	Fix SPMEN bit def.

2004-05-14  Theodore A. Roth  <troth@openavr.org>
[Thanks to Bruce Graham <bgraham@huronnet.com> for reporting these.]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iocan128.h (SRW00, SRW01, SRW10, SRW11): Fix bit name.
	(FOC2A, COM2A1, COM2A0): Ditto.

2004-05-13  Theodore A. Roth  <troth@openavr.org>
[Thanks to Bruce Graham <bgraham@huronnet.com> for reporting these.]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iocan128.h (OCR1A, OCR1AL, OCR1AH): Fix register name.
	(OCR1B, OCR1BL, OCR1BH, OCR1CL, OCR1CH): Ditto.
	(OCR3A, OCR3AL, OCR13H, OCR3B, OCR3BL, OCR3BH): Ditto.
	(OCR3CL, OCR3CH): Ditto.
	(OCR1C, OCR3C): Fix register name and address.
	(CANMSG): Define.

2004-04-29  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Set AVR_LIBC_USER_MANUAL with version number appended
	only if versioned docs are requested (that's the default).

2004-04-28  Theodore A. Roth  <troth@openavr.org>

	* include/avr/eeprom.h (eeprom_rb): Remove deprecated interface.
	(eeprom_rw): Ditto.
	(eeprom_wb): Ditto.
	(_EEPUT): Use eeprom_write_byte() directly instead of eeprom_wb().